aloe, girasol, zarza. Quitar pimiento

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<!-- 2017/11/12 -->
 <div id="plantsApp" class="page">
     <header>
         <hgroup class="title-page">
@@ -25,12 +25,12 @@
     <nav>
         <ul class="primary-nav">
             <li>
-                <a href="" class="griffy primary-nav__link icon icon-tree"
-                    @click.prevent="setMenuActivo('zuhaitzak')">Zuhaitzak</a>
+                <a href="" class="griffy primary-nav__link icon icon-flower" 
+                @click.prevent="setMenuActivo('loreak')">Landareak</a>
             </li>
             <li>
-                <a href="" class="griffy primary-nav__link icon icon-flower" 
-                @click.prevent="setMenuActivo('loreak')">Loreak</a>
+                <a href="" class="griffy primary-nav__link icon icon-tree"
+                    @click.prevent="setMenuActivo('zuhaitzak')">Zuhaitzak</a>
             </li>
         </ul>
     </nav>
@@ -58,7 +58,7 @@
     </main>
 
     <footer class="near-black bg-near-white">
-        this is the footer
+        <p class="text-center"><a href="http://cervanteseskola.eus/">Cervantes Eskolako</a> ikasleentzat. 2017-18 kurtsoa.</p>
     </footer>
 </div>
 
